# small-tools

./: .kaba-repo
gl/: .kaba-package  gl.kaba
gl/sharedlib/: CMakeLists.txt  vcpkg.json  xmake.conf
gl/sharedlib/src/: KabaExporter.h  main.cpp
glfw/: .kaba-package
glfw/sharedlib/src/: main.cpp
hui/: .kaba-package  hui.kaba
hui/sharedlib/: CMakeLists.txt  xmake.conf
hui/sharedlib/src/: main.cpp
huibui/: .kaba-package  config.kaba
misc/: wiki-sketch.kaba
mongo/: .kaba-package
mongo/sharedlib/: CMakeLists.txt
mongo/sharedlib/src/: main.cpp
ncurses/: .kaba-package
ncurses/sharedlib/src/: main.cpp
package/: .kaba-package  package.kaba
pdf/sharedlib/: CMakeLists.txt  xmake.conf
pdf/sharedlib/src/: main.cpp
sisyphos/: .kaba-package  config.kaba  localdb.kaba  remote.kaba
sqlite/: .kaba-package
sqlite/sharedlib/src/: main.cpp
terminal/: .kaba-package
terminal/sharedlib/src/: main.cpp
tools/: .kaba-package  dirdiff.kaba
vulkan/: .kaba-package
vulkan/sharedlib/: CMakeLists.txt
vulkan/sharedlib/src/: main.cpp
vulkan/sharedlib/src/lib/vulkan/: _kaba_export.cpp
xmake/: .kaba-package  build-manual.kaba  build.kaba  cmake.kaba  library.kaba  project.kaba  xmake.kaba
zlib/: .kaba-package
zlib/sharedlib/src/: main.cpp
